# select_and_save_plugin

./: README.md
select_and_save_plugin/: CMakeLists.txt  package.xml  plugins_description.xml  select_and_save_plugin-extras.cmake
select_and_save_plugin/config/: velodyne.rviz
select_and_save_plugin/include/select_and_save_plugin/: visibility_control.hpp
select_and_save_plugin/include/select_and_save_plugin/tools/select/: selection_tool.hpp
select_and_save_plugin/src/select_and_save_plugin/tools/select/: selection_tool.cpp
