<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>select_and_save_plugin</name>
  <version>0.1.0</version>
  <description>
    Select point cloud and save its statistics
  </description>
  <maintainer email="delicat.kuba@gmail.com">Jakub Delicat</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>rosbag2_interfaces</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>yaml-cpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
